@@ -5,6 +5,7 @@ Revision history for libev, a high-performance and full-featured event loop.
         - updated/extended ev_set_allocator documentation.
         - replaced EMPTY2 macro by array_needsize_noinit.
         - minor code cleanups.
+        - epoll backend now uses epoll_create1 also after fork.
 
 4.25 Fri Dec 21 07:49:20 CET 2018
         - INCOMPATIBLE CHANGE: EV_THROW was renamed to EV_NOEXCEPT
